k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: br-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - stevesleeve.dev
    secretName: br-tls
  rules:
  - host: stevesleeve.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: br-frontend-service
            port:
              number: 80
